Criado o endpoint de criação de novos usuários.
